--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -24,8 +24,9 @@
                 </div>
                 <div class="content-body" *ngFor="let weightModal of weights; let i = index">
                     <div class="col-2 name">
-                        <div>{{weightModal.name}} 
-                            <!-- <img src="assets/icons/warning_escalation.svg"> -->
+                        <div>
+                            <img class="pr-1" *ngIf="weightModal.showFieldWarning && (weightModal.showFieldWarning !== 'false')"   src="assets/icons/info-blue.svg" [tooltipClass]="'whiteTooltip'" container="body"  ngbTooltip='{{fieldWarnings[weightModal.showFieldWarning] || weightModal.showFieldWarning}}'>
+                            {{weightModal.name}} 
                         </div>
                         <div class="pre_defined" *ngIf="!weightModal.isField">{{'weights.SYSTEM-DEFINED'| translate}}</div>
                         <!-- <div class="pre_defined" *ngIf="!weightModal.isField">{{'weights.PRE-DEFINED'| translate}}</div> -->
