--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -361,12 +361,12 @@
                           <button class="dropdown-toggle dropdown-input"
                             data-toggle="dropdown">{{allowUrl.condition}}</button>
                           <ul class="dropdown-menu content-menu">
-                            <li (click)="urlCondition('Is' , 'allow')"><a>Is</a></li>
-                            <li (click)="urlCondition('Is not', 'allow')"><a>Is not</a></li>
-                            <li (click)="urlCondition('Begins with', 'allow')"><a>Begins with</a></li>
-                            <li (click)="urlCondition('Ends with', 'allow')"><a>Ends with</a></li>
-                            <li (click)="urlCondition('Contains', 'allow')"><a>Contains</a></li>
-                            <li (click)="urlCondition(doesntContains, 'allow')"><a>Doesn't contain</a></li>
+                            <li (click)="urlCondition('is' , 'allow')"><a>Is</a></li>
+                            <li (click)="urlCondition('isNot', 'allow')"><a>Is not</a></li>
+                            <li (click)="urlCondition('beginsWith', 'allow')"><a>Begins with</a></li>
+                            <li (click)="urlCondition('endsWith', 'allow')"><a>Ends with</a></li>
+                            <li (click)="urlCondition('contains', 'allow')"><a>Contains</a></li>
+                            <li (click)="urlCondition('doesNotContains', 'allow')"><a>Doesn't contain</a></li>
                           </ul>
                         </div>
                       </div>
@@ -412,12 +412,12 @@
                           <button class="dropdown-toggle dropdown-input"
                             data-toggle="dropdown">{{blockUrl.condition}}</button>
                           <ul class="dropdown-menu content-menu">
-                            <li (click)="urlCondition('Is' , 'block')"><a>Is</a></li>
-                            <li (click)="urlCondition('Is not', 'block')"><a>Is not</a></li>
-                            <li (click)="urlCondition('Begins with', 'block')"><a>Begins with</a></li>
-                            <li (click)="urlCondition('Ends with', 'block')"><a>Ends with</a></li>
-                            <li (click)="urlCondition('Contains', 'block')"><a>Contains</a></li>
-                            <li (click)="urlCondition(doesntContains, 'block')"><a>Doesn't contain</a></li>
+                            <li (click)="urlCondition('is' , 'block')"><a>Is</a></li>
+                            <li (click)="urlCondition('isNot', 'block')"><a>Is not</a></li>
+                            <li (click)="urlCondition('beginsWith', 'block')"><a>Begins with</a></li>
+                            <li (click)="urlCondition('endsWith', 'block')"><a>Ends with</a></li>
+                            <li (click)="urlCondition('contains', 'block')"><a>Contains</a></li>
+                            <li (click)="urlCondition('doesNotContains', 'block')"><a>Doesn't contain</a></li>
                           </ul>
                         </div>
                       </div>
