--- a/findly-builder/src/app/components/settings/settings.component.html
+++ b/findly-builder/src/app/components/settings/settings.component.html
@@ -1,4 +1,3 @@
-
 <!-- New Layouts -->
 
 <div class="channels-main-container">
@@ -35,7 +34,7 @@
                 selection below. Each channel may have a unique process to enable it but the instructions are provided.
             </div>
         </div>
-        <div class="card_data row m-0" >
+        <div class="card_data row m-0">
             <div class="card-content active" *ngFor=" let channel of channels">
                 <div class="dropdown kr-sg-overflow-menu d-none">
                     <div class="dropdown-toggle" id="menu1" data-toggle="dropdown"><img class="action_icon"
@@ -50,9 +49,9 @@
                     <div class="main-title">{{channel.name}}</div>
                     <div class="configuration" *ngIf="channel.enable">CONFIGURED</div>
                 </div>
-             
+
             </div>
-            
+
         </div>
     </div>
 
@@ -64,12 +63,12 @@
                     <div class="title ">Instructions</div>
                 </div>
 
-                <div class="progress_bar col-4 p-0 text-center  step" [ngClass] ="{'active-bar' : slider>1}">
+                <div class="progress_bar col-4 p-0 text-center  step" [ngClass]="{'active-bar' : slider>1}">
                     <div class="circle"></div>
                     <div class="title">Select Credential</div>
 
                 </div>
-                <div class="progress_bar col-4 p-0 text-center step" [ngClass] ="{'active-bar' : slider>2}">
+                <div class="progress_bar col-4 p-0 text-center step" [ngClass]="{'active-bar' : slider>2}">
                     <div class="circle"></div>
                     <div class="title">Generate Token</div>
                 </div>
@@ -106,7 +105,7 @@
                 <div class="desc-text">Create a credential to associate it with the channel</div>
                 <div class="kr-sg-input-text">
                     <div class="label-text">Credential Name</div>
-                    <input type="text" placeholder="Type Name" class="input-text" [(ngModel)]="credntial.name" required> 
+                    <input type="text" placeholder="Type Name" class="input-text" [(ngModel)]="credntial.name" required>
 
 
                 </div>
@@ -150,7 +149,8 @@
                                     class="select-placeholder">{{listData?listData.appName:'Select or Add Credential'}}</span></button>
                             <ul class="dropdown-menu content-menu">
                                 <li *ngFor="let channel of channnelConguired.apps" (click)="selctedChannel(channel)">
-                                    <a>{{channel.appName}}</a></li>
+                                    <a>{{channel.appName}}</a>
+                                </li>
                                 <li class="add-custom" (click)="newCredential()"><a>Add New Credential</a>
                                 </li>
                             </ul>
@@ -162,47 +162,54 @@
                         <div class="label-text">App Name</div>
                         <div class="input-box mb-4">
                             <div class="kr-sg-input-text">
-                                <input type="text"  class="input-text" [value]="selectedApp.name"
-                                    readonly>
+                                <input type="text" class="input-text" [value]="selectedApp.name" readonly>
                             </div>
-                            <div class="copy-btn"><img src="assets/images/icons/copy.svg"
-                                    (click)="copy(selectedApp.name,clipAppName)">Copy</div>
+                            <div class="copy-btn" (click)="copy(selectedApp.name,clipAppName)"><img src="assets/images/icons/copy.svg">Copy</div>
                         </div>
                     </div>
                     <div class="input-data">
                         <div class="label-text">App ID</div>
                         <div class="input-box mb-4">
                             <div class="kr-sg-input-text">
-                                <input type="text"
-                                    class="input-text" [value]="selectedApp._id" readonly>
+                                <input type="text" class="input-text" [value]="selectedApp._id" readonly>
                             </div>
-                            <div class="copy-btn"><img src="assets/images/icons/copy.svg"
-                                    (click)="copy(listData.accountId,clipAppID)">Copy</div>
+                            <div class="copy-btn" (click)="copy(selectedApp._id,clipAppID)"><img
+                                    src="assets/images/icons/copy.svg">Copy</div>
                         </div>
                     </div>
                     <div class="input-data">
                         <div class="label-text">Client ID</div>
                         <div class="input-box mb-4">
                             <div class="kr-sg-input-text">
-                                <input type="text"
-                                    class="input-text" [value]="listData.clientId" readonly>
+                                <input type="text" class="input-text" [value]="listData.clientId" readonly>
                             </div>
-                            <div class="copy-btn"><img src="assets/images/icons/copy.svg"
-                                    (click)="copy(listData.clientId,clipClientId)">Copy</div>
+                            <div class="copy-btn" (click)="copy(listData.clientId,clipClientId)"><img
+                                    src="assets/images/icons/copy.svg">Copy</div>
                         </div>
                     </div>
                     <div class="input-data">
                         <div class="label-text">Client Secret ID</div>
                         <div class="input-box mb-4">
                             <div class="kr-sg-input-text">
-                                <input type="password" placeholder="Type Name" class="input-text"
+                                <input type="password"  class="input-text"
                                     [value]="listData.clientSecret" readonly>
                                 <img src="assets/images/icons/eye.svg" class="eye" type="eye" (click)="showPasword()">
                             </div>
-                            <div class="copy-btn"><img src="assets/images/icons/copy.svg"
-                                    (click)="copy(listData.clientSecret,clipclientSecret)">Copy</div>
+                            <div class="copy-btn" (click)="copy(listData.clientSecret,clipclientSecret)"><img
+                                    src="assets/images/icons/copy.svg">Copy</div>
                         </div>
                     </div>
+                    <div class="input-data">
+                        <div class="label-text">Index ID</div>
+                        <div class="input-box mb-4">
+                            <div class="kr-sg-input-text">
+                                <input type="text" class="input-text" [value]="serachIndexId" readonly>
+                            </div>
+                            <div class="copy-btn" (click)="copy(serachIndexId,clipSerachIndexId)"><img
+                                    src="assets/images/icons/copy.svg">Copy</div>
+                        </div>
+                    </div>
+
                     <div class="border-line"></div>
                     <div class="accordion-sec">View JSON Web Encryption Public Key <img
                             src="assets/images/icons/carrot_up.svg"></div>
@@ -234,8 +241,10 @@
                 <button class="kr-sg-button-secondary btn_lg" (click)="cancel()">Cancel</button>
             </div>
             <div>
-                <button class="kr-sg-button-secondary btn_lg mr-3" *ngIf=!existingCredential (click)="back()">Back</button>
-                <button class="kr-sg-button-primary btn_lg" (click)="continue()"  *ngIf="slider!==3" [disabled]="(!(credntial.name) || !(credntial.awt)) && (slider==2)" > Continue</button>
+                <button class="kr-sg-button-secondary btn_lg mr-3" *ngIf=!existingCredential
+                    (click)="back()">Back</button>
+                <button class="kr-sg-button-primary btn_lg" (click)="continue()" *ngIf="slider!==3"
+                    [disabled]="(!(credntial.name) || !(credntial.awt)) && (slider==2)"> Continue</button>
                 <button class="kr-sg-button-primary btn_lg" *ngIf="slider==3"
                     (click)="configureCredential()">Save</button>
 
