--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -8,7 +8,7 @@
 			</span>
 			<span class="linkTitle">Summary</span>
 		</div> -->
-			<div class="kr-sg-dropdowns" #selectResourceDrop='ngbDropdown' ngbDropdown [placement]="'bottom-right'">
+			<!-- <div class="kr-sg-dropdowns" #selectResourceDrop='ngbDropdown' ngbDropdown [placement]="'bottom-right'">
 				<div class="dropdown dropdown-open">
 					<button class="dropdown-toggle dropdown-input" ngbDropdownToggle>Default</button>
 					<ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
@@ -17,7 +17,7 @@
 
 					</ul>
 				</div>
-			</div>
+			</div> -->
 			<div class="sub-title">Sources <img src="assets/icons/sidemenu/plus.svg" [routerLink]="['/source']"
 					skipLocationChange routerLinkActive="active" (click)="preview('Source')"></div>
 			<div [routerLink]="['/faqs']" mat-button class="mat-button" skipLocationChange routerLinkActive="active"
