--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -59,7 +59,7 @@
                                                     </div>
                                                     <div class="title-desc-sec col-10">
                                                         <div class="title">{{list.searchQuery}}</div>
-                                                        <div class="desc">{{list.numberOfCustomisations}} customisations</div>
+                                                        <div class="desc">{{list.numberOfCustomisations}} customization</div>
                                                     </div>
                                                     <div class="title-desc-sec col-1">
                                                         <div class="restore-icon" (click) = "restore(list)" ><img class="action-icon" src="assets/icons/restore.svg"></div>
