--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -630,6 +630,24 @@
                 </div>
               </div> 
             
+              <div class="inner-content row">
+                <div class="col-4"> 
+                  
+                  <div class="kr-sg-input-text mb-4">
+                    <div class="label-text">Crwal Depth <img src="assets/icons/info.svg">
+                    </div>
+                    <input type="url" autocomplete="off" id="crawlDepth" name="crawlDepth" placeholder="0"
+                      [(ngModel)]="crawlDepth" class="input-text" >
+                  </div>
+                </div>
+                <div class="col-4"> 
+                  <div class="kr-sg-input-text mb-4">
+                    <div class="label-text">Max URL Limit <img src="assets/icons/info.svg"></div>
+                    <input type="url" autocomplete="off" id="maxUrlLimit" name="maxUrlLimit" placeholder="0"
+                      [(ngModel)]="maxUrlLimit" class="input-text">
+                  </div>
+                </div>
+              </div>
               <!-- Cookies -->
                <!-- New Crwal everey thing-->
                 <!-- Old  Crwal Design-->
