FLY-810 and FLY-811 issues fixed.

--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1620,3 +1620,19 @@ ngx-simplebar {
         } 
     }
 }
+
+.krFindlyAppComponent{
+    &.appSelected{
+        .appContent{
+            &.pl-0{
+                .search-background-div{
+                    .search-container{
+                        &.conversation{
+                            right: 10px !important;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
