--- a/findly-builder/src/app/components/app-menu/app-menu.component.scss
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.scss
@@ -273,6 +273,9 @@ app-mainmenu{
 					cursor: pointer;
 					border-top: 1px solid #EFF0F1;
 				}
+			}
+			.edit-name{
+				width: 100%;
 			}				
 		}
 	}
