--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -153,12 +153,12 @@
           top: 19px;
           color: #26344A;
           font-weight: 500;
-          font-size: 12px;
-          line-height: 15px;
-          border: 1px solid #BDC1C6;
+          font-size: 14px;
+          line-height: 17px;
+          //border: 1px solid #BDC1C6;
           box-sizing: border-box;
           border-radius: 4px;
-          padding: 1px 10px;
+          //padding: 1px 10px;
           margin-left: 30px;
           max-width: 160px;
           overflow: hidden;
