--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -92,7 +92,7 @@
 								<span >{{config.name}}</span>
 							</ng-template>
 							<!-- <img src="assets/icons/filter_cup.svg" class="filter"> -->
-							<img src="assets/icons/edit-pencil.svg" (click)="editConfig(config,'edit')" class="edit-black">
+							<img src="assets/icons/edit-pencil.svg" (click)="$event.stopPropagation();editConfig(config,'edit')" class="edit-black">
 						</li>
 						<div class="create-new" (click)="openModalPopup();selectConfigDrop.close();">+ Create New</div>
 					</ul>
