enabled fix settings

--- a/findly-builder/src/app/components/settings/settings.component.html
+++ b/findly-builder/src/app/components/settings/settings.component.html
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <label class="kr-sg-toggle">
-                    <input type="checkbox" checked>
+                    <input type="checkbox" >
                     <div class="slider"><span class="enabled">Push Notifications Enabled</span><span
                             class="disabled">Push Notifications Enabled</span></div>
                 </label>
